Prevent overflows, add text under cards

--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,28 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 10px 15px;
 }
 
-.signup-button{
-    width: 30%;
-    margin: 0px 30px 30px 30px;
+.text h1{
+    font-size: 48px;
+    font-weight: 900;
+    margin: 0;
+}
+
+.text p{
+    flex: 1;
+    font-size: 18px;
+
+}
+
+.text .signup-button{
+    width: 15%;
+    height: 10%;
+    margin: 0px 15px 15px 15px;
     flex-grow: 0;
+    border-radius: 8px;
+    
 }
 
 .centered-image{
@@ -111,8 +127,20 @@ a{
 
 .card{
     width: 20%;
-    height: 50%;
-    background-color: green;
+    height: 60%;
+    background-color: green;    
+}
+
+.card-content{
+    width: 100%;
+    height: 70%;
+}
+
+.card-text{
+    height: 30%;
+    padding: 0px 20px;
+    font-size: 18px;
+    overflow: hidden;
 }
 
 .quote-container{
@@ -123,7 +151,10 @@ a{
 }
 
 .quote{
+    flex-wrap: wrap;
+    max-width: 55%;
     font-weight: 900;
+    word-wrap: break-word;
 }
 
 .signup{
